[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asb-skill-collections"
version = "0.1.0"
description = "Bootstrap scripts and CI helpers for HolobiomicsLab/asb-skill-collections"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "requests>=2.31",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
