[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asb-skill-collections"
version = "0.1.0"
description = "Bootstrap scripts and CI helpers for HolobiomicsLab/asb-skill-collections"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "requests>=2.31",
]

[project.scripts]
# Registry utility CLI (Phase 1.7): registry/verify/doctor only.
# NOT the install surface — collections install via /plugin install.
asbb = "scripts.asbb_cli:main"

[project.optional-dependencies]
hf = [
    "huggingface_hub>=0.23",
]
# Embedding similarity graph (scripts.build_related_skills). The model is loaded
# lazily — the module imports fine without this extra; only the real precompute
# needs it.
embed = [
    "sentence-transformers>=2.2",
]
embed-openai = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "responses>=0.25",
    "huggingface_hub>=0.23",
]
test = [
    "pytest>=8.0",
    "pytest-cov",
    "responses>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
